restore identitypartitionexpt for truncate, etc